[package]
name = "tcp_benchmarks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client/main_client.rs"

[[bin]]
name = "server"
path = "src/server/main_server.rs"

[dependencies]
rand = "0.8.4"
